Overhauled full Creative Tab system